syntax = "proto3";

package basic.user.v1;
option go_package = "github.com/kzmake/examples/basic-state-management/api/user/v1;user";

import "google/api/annotations.proto";

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/user/v1/users"
      body: "*"
    };
  }

  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/user/v1/users"
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/user/v1/users/{user_id}"
    };
  }

  rpc Rename(RenameRequest) returns (RenameResponse) {
    option (google.api.http) = {
      patch: "/user/v1/users/{user_id}"
			body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/user/v1/users/{user_id}"
    };
  }
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  User user = 1;
}

message ListRequest {
}

message ListResponse {
  repeated User users = 1;
}

message GetRequest {
  string user_id = 1;
}

message GetResponse {
  User user = 1;
}

message RenameRequest {
  string user_id = 1;
  string name = 2;
}

message RenameResponse {
  User user = 1;
}

message DeleteRequest {
  string user_id = 1;
}

message DeleteResponse {
}


message User {
  string id = 1;
  string name = 2;
}
